--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import VueCounter from '../components/VueCounter.vue'
 ---
 
 <html lang="en">
@@ -11,6 +11,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<VueCounter client:load />
 		<h1>Astro</h1>
 	</body>
 </html>
